2005-11-18  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/producers/soundcard/soundcard.xml: entry =
	Soundcard
	* flumotion/component/producers/soundcard/soundcard.py
	(SoundcardProducer.__init__): entry = Soundcard

	* flumotion/component/producers/webcam/webcam.py
	(Webcam.__init__): Refactor so entry = Webcam
	* flumotion/component/producers/webcam/webcam.xml: entry = Webcam

	* flumotion/component/producers/videotest/videotest.xml: Set the
	class as the component entry point.

	* flumotion/component/producers/videotest/videotest.py
	(VideoTest.__init__): Move createComponent code to __init__. This
	is probably how all components should be done.

	* flumotion/manager/worker.py (WorkerAvatar.start): Pull the entry
	point from the registry.

	* flumotion/component/producers/pipeline/pipeline.py
	(Producer.__init__): Fix stupid errors

	* flumotion/common/log.py (theFluLogObserver): Make a singleton
	normally.

	* flumotion/common/bundleclient.py (BundleLoader.getBundles):
	Fool pychecker -- for some reason it doesn't like os at the
	toplevel here.

	* flumotion/component/converters/pipeline/pipeline.py
	(Converter.__init__):
	* flumotion/component/producers/pipeline/pipeline.py
	(Producer.__init__):
	* flumotion/component/producers/soundcard/soundcard.py
	(SoundcardProducer.__init__): Don't poke config['feed'], this is
	not a property.

2005-11-16  Edward Hervey  <edward@fluendo.com>

	* flumotion/component/producers/looper/looper.py: (createComponent): 
	Fix looper pipeline.

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* flumotion/component/producers/looper/looper.py: (Looper._message_cb):
	so if we loop 1 000 000 000 times we end up playing one second less.... bad !

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* flumotion/component/producers/Makefile.am
	* flumotion/component/producers/looper/Makefile.am
	* flumotion/component/producers/looper/__init__.py
	* flumotion/component/producers/looper/looper.xml	