@@ -1,5 +1,10 @@
 2005-11-18  Andy Wingo  <wingo@pobox.com>
 
+	* flumotion/component/producers/pipeline/pipeline.py
+	(Producer.__init__): entry = Producer
+	* flumotion/component/producers/pipeline/pipeline.xml: entry =
+	Producer
+
 	* flumotion/component/producers/soundcard/soundcard.xml: entry =
 	Soundcard
 	* flumotion/component/producers/soundcard/soundcard.py
